fix aluno step 1 issue with tshirts and shoes

--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -86,8 +86,8 @@
 
                                 <div layout="column" layout-gt-xs="row" layout-margin layout-align="space-around none" style="height: 100vh, width: 100vh">
 
-                                    <md-input-container flex="100" flex-gt-xs="20">
-                                        <label>Tamanho da camiseta</label>
+                                    <md-input-container flex="100" flex-gt-xs="15">
+                                        <label>Tam. da camiseta</label>
                                         <md-select ng-model="vm.data.roupa.tamanhoCamiseta" required>
                                             <md-option ng-repeat="camiseta in vm.camisetas" value="{{camiseta}}">
                                                 {{camiseta}}
@@ -96,7 +96,7 @@
                                     </md-input-container>
 
                                     <md-input-container flex="100" flex-gt-xs="15">
-                                        <label>Tamanho da calça</label>
+                                        <label>Tam. da calça</label>
                                         <md-select ng-model="vm.data.roupa.tamanhoCalca" required>
                                             <md-option ng-repeat="calca in vm.calcas" value="{{calca}}">
                                                 {{calca}}
@@ -104,8 +104,8 @@
                                         </md-select>
                                     </md-input-container>
 
-                                    <md-input-container flex="100" flex-gt-xs="20">
-                                        <label>Tamanho do calçado</label>
+                                    <md-input-container flex="100" flex-gt-xs="15">
+                                        <label>Tam. do calçado</label>
                                         <md-select ng-model="vm.data.roupa.tamanhoSapato" required>
                                             <md-option ng-repeat="sapato in vm.sapatos" value="{{sapato}}">
                                                 {{sapato}}
